# Lime

./: .gitignore  LimeDemonstration.ipynb  README.md  analysis.py  data_ana_1.ipynb  lime.bat  lime.py  lime.sh  limeBackup.py  limeWeight.sh  limeWight.py  newWeightInfo.sh  normalization.py  power_protocol.py  process.sh  requirement.txt  requirements.txt  special_items.py  visualization.py
LimeJulia/: Lime.jl  REQUIRE  chewing.db  demo.ipynb
LimeOne/: __init__.py  analysis.py  database.py  limedata.py  poseAnalysis.py  power_protocol.py  sensor.py  sensorImporter.py  video.py  videoOverSensor.py
Sensor/: climbInfo.py  poseAnalysis.py  power_protocol.py  video.py  videoOverSensor.py
Video/: README.md  progress_bar.cpp  progress_bar.hpp  videoAnalysis
demo/: GetChewTimeCountFromCFandVF.ipynb  Thresh_Demo.ipynb  demo_data_distribution.ipynb  demo_noise_distribution_data_importer.py  demo_video_episode.ipynb  noise_checker.ipynb  pose_analysis_demo.ipynb
eyeExcel_csv/: README.md  demo.xlsx  eye_xlsx2csv.py  requirement.txt
juliaLime/: README.md  analysis.jl  normalization.jl  specialItems.jl  visualization.jl
limeOne/: README.md  lime.py  requirements.txt
limeOne/Video/: CMakeLists.txt  frame_analysis.cpp  realtime.h  realtime_analysis.cpp  setup.sh  videoAnalysis
notebook/: Convertor.ipynb  LimeDemonstration.ipynb  limeImport.py
sensor/: README.md  power_protocol.py  special_items.py
video/: CMakeLists.txt  frame_analysis.cpp  realtime.h  realtime_analysis.cpp  realtime_demo.cpp
videoCaptureAnalysis/: realtime.h  realtime_line.cpp
(+11 files in other folders)
